--- a/MovieWebApplication/Views/Home/MovieDescription.cshtml
+++ b/MovieWebApplication/Views/Home/MovieDescription.cshtml
@@ -18,12 +18,12 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
-                    <img src="@Model.Poster" id="adimg" alt="YourText" title="@Model.Title" width="300px" height="400px" />
+                    <img src="@Model.Poster" id="adimg" alt="YourText" title="@Model.Title" width="250px" height="250px" />
                 </div>
                 <div class="col-md-8">
                     <dl class="dl-horizontal">
                         <dd>
-                            <b>Price: @Html.DisplayFor(model => model.Price)</b>
+                            <b>Ticket Price: @Html.DisplayFor(model => model.Price)</b>
                         </dd>
 
                         <dd>
@@ -44,9 +44,14 @@
                     </dl>
                 </div>
             </div>
-            @Html.ActionLink("Back to Movies List", "Index")
 
         </div>
         }
+<br />
+@Html.ActionLink("Back to Movies List", "Index")
+
+
+
+
 
 
