--- a/MovieWebApplication/Views/Home/MovieDescription.cshtml
+++ b/MovieWebApplication/Views/Home/MovieDescription.cshtml
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
-                    <img src="@Model.Poster" id="adimg" alt="YourText" title="@Model.Title" width="250px" height="250px" />
+                    <img src="@Model.Poster" class="img-rounded" id="adimg" alt="No Preview" title="@Model.Title" width="250px" height="250px" />
                 </div>
                 <div class="col-md-8">
                     <dl class="dl-horizontal">
